<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">Welcome to K234112E</string>
    <string name="str_say_hello">HELLO K234112E</string>
    <string name="str_clickme_to_say_hello">Say Hello</string>
    <string name="str_login_system">Login System</string>
    <string name="str_username">Username:</string>
    <string name="str_hint_username">Enter your User name</string>
    <string name="str_password">Password:</string>
    <string name="str_hint_password">Enter your Password</string>
    <string name="str_default_username">admin</string>
    <string name="str_default_password">123</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_login_success">Login successful!!!!!</string>
    <string name="str_login_failed">Login failed!!!!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_infor">Save login information</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_employee_id">Employee Id:</string>
    <string name="str_employee_name">Employee name:</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>
    <string name="str_confirm_exit">Are you sure you want to exit?</string>
    <string name="str_want_exit">Do you want to exit the application?</string>
    <string name="str_msg_select_employee">Please select an employee to delete</string>
    <string name="str_confirm_delete_title">Delete Confirmation</string>
    <string name="str_confirm_delete_msg">Do you really want to delete this employee?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_delete_success">Deleted successfully</string>
    <string name="str_department">Department</string>
    <string name="str_list_employee">List Employee</string>
    <string name="str_birthplace">Birth Place:</string>
    <string name="str_order_report">Order Report</string>
    <string name="str_from_date">From Date:</string>
    <string name="str_to_date">To Date:</string>
    <string name="str_order_status_all">All Status</string>
    <string name="str_order_status_completed">Completed</string>
    <string name="str_order_status_not_payment">Not Payment</string>
    <string name="str_order_status_on_logistic">On Logistic</string>
    <string name="str_order_status_customer_complaint">Customer Complaint</string>
    <string name="str_category_new">New Category</string>
    <string name="str_category_statistic">Statistic</string>
    <string name="str_category_id">Category ID:</string>
    <string name="str_category_name">Category Name:</string>
    <string name="str_category_description">Description:</string>
    <string name="str_phone">Phone:</string>
    <string name="str_time">Time:</string>
    <string name="str_messagebody">Message Body:</string>
    <string name="str_smsspyware">SMS SPYWARE ACTIVITY</string>
    <string name="str_number_button">Number Button</string>
    <string name="str_create_button">Button</string>
    <string name="str_multi_threading_demo">Multi Threading Demo</string>
    <string-array name="array_birthplace">
        <item>An Giang</item>
        <item>Bắc Ninh</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Phòng</item>
        <item>Hưng Yên</item>
        <item>Huế</item>
        <item>Khánh Hòa</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>TP Hồ Chí Minh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
    </string-array>
</resources>