<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/edtFormula"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="@drawable/bg_apple"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mc"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_mr"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtMPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mplus"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtMMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_mminus"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_ms"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_m"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_divide"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="%" />

            <Button
                android:id="@+id/btn_ce"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="CE" />

            <Button
                android:id="@+id/btn_c"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="C" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="Del" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1_x"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="1/x" />

            <Button
                android:id="@+id/btn_sqr_"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="x^2" />

            <Button
                android:id="@+id/btn_sqrt"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="sqrt(x)" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text=":" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="7" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="8" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="9" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="*" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="4" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="5" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="6" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="-" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="1" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="2" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="3" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="+" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_congtru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="+/-" />

            <Button
                android:onClick="processInputData"
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="0" />

            <Button
                android:id="@+id/btn_digit"
                android:onClick="processSpecialInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="." />

            <Button
                android:id="@+id/btn_Calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFEB3B"
                android:text="=" />
        </TableRow>

    </TableLayout>
</LinearLayout>